<resources>
    <string name="app_name">BondoMan</string>
    <string name="title_transaction">Transaction Page</string>
    <string name="title_report">Report Page</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_twibbon">Twibbon Page</string>
    <string name="title_settings">Settings Page</string>
    <string name="title_activity_login">Login</string>
    <string name="title_login">Login</string>
    <string name="title_create_transaction">Create Transaction Page</string>
    <string name="title_detail_transaction">Detail Transaction Page</string>
    <string name="title_update_transaction">Update Transaction Page</string>

    <string name="bottom_nav_transaction">Transaction</string>
    <string name="bottom_nav_report">Report</string>
    <string name="bottom_nav_scanner">Scanner</string>
    <string name="bottom_nav_twibbon">Twibbon</string>
    <string name="bottom_nav_settings">Settings</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_logout">Logout</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="welcome">"Welcome!"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="preview_scan">"Scan Preview"</string>
    <string name="scan_failed">"Scan Failed"</string>
    <string name="scan_success">"Scan Success"</string>
    <string name="prompt_title">"Title"</string>
    <string name="prompt_category">"Category"</string>
    <string name="prompt_amount">"Amount"</string>
    <string name="action_save">"Save"</string>
    <string name="action_continue">"Continue"</string>
    <string name="action_scan">"Scan"</string>
    <string name="action_cancel">"Cancel"</string>
    <string name="action_delete">"Delete"</string>
    <string name="action_create">"Add"</string>
    <string name="edit_description">"Edit"</string>
    <string name="delete_description">"Delete"</string>
    <string name="select_category">"Select Category"</string>
    <string name="invalid_title">"Fill the title!"</string>
    <string name="invalid_amount_empty">"Fill the amount!"</string>
    <string name="invalid_amount_negative">"Amount must be positive!"</string>
    <string name="invalid_category">"Category Required!"</string>
    <string name="transaction_card">Transaction Card</string>

    <string name="transaction_saved">"Transaction saved!"</string>
    <string name="transaction_deleted">"Transaction deleted!"</string>
    <string name="transaction_updated">"Transaction updated!"</string>
    <string name="transaction_not_saved">"Transaction not saved!"</string>
    <string name="transaction_not_deleted">"Transaction not deleted!"</string>
    <string name="transaction_not_updated">"Transaction not updated!"</string>
    <string name="transaction_not_found">"Transaction not found!"</string>
    <string name="empty_transaction_list">"No transaction"</string>

    <string name="action_broadast_transaction">"Broadcast Transaction"</string>
    <string name="action_send_transaction">"Send Transactions"</string>
    <string name="action_export_transaction">"Export Transactions (XLSX)"</string>
    <string name="action_export_transaction_xls">"Export Transactions (XLS)"</string>
    <string name="action_back">"Back"</string>

    <string name="expense">"Expense"</string>
    <string name="income">"Income"</string>
    <string name="report_loading">"Loading Reports"</string>
    <string name="report_error">"Error Making Reports"</string>
    <string name="report_chart">"Report Chart"</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_transaction_action">Add Transaction Action</string>
    <string name="scan_transaction_action">Scan Transaction Action</string>
    <string name="capture_twibbon">"Capture Twibbon"</string>


</resources>