<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_transaction">

    <activity
        android:id="@+id/navigation_settings"
        android:name="com.informatika.bondoman.view.activity.SettingsActivity"
        android:label="@string/title_settings"
        tools:layout="@layout/activity_settings" />
    <fragment
        android:id="@+id/navigation_report"
        android:name="com.informatika.bondoman.view.fragment.ReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_report" />
    <fragment
        android:id="@+id/navigation_twibbon"
        android:name="com.informatika.bondoman.view.fragment.TwibbonFragment"
        android:label="@string/title_twibbon"
        tools:layout="@layout/fragment_twibbon" />
    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.informatika.bondoman.view.fragment.transaction.ListTransactionFragment"
        android:label="@string/title_transaction"
        tools:layout="@layout/fragment_list_transaction">
        <action
            android:id="@+id/action_navigation_transaction_to_navigation_create_transaction"
            app:destination="@id/navigation_create_transaction" />
        <action
            android:id="@+id/action_navigation_transaction_to_navigation_detail_transaction"
            app:destination="@id/navigation_detail_transaction" >
            <argument
                android:name="transaction"
                app:argType="com.informatika.bondoman.model.local.entity.transaction.Transaction" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_create_transaction"
        android:name="com.informatika.bondoman.view.fragment.transaction.CreateTransactionFragment"
        android:label="@string/title_create_transaction"
        tools:layout="@layout/fragment_create_transaction">
    </fragment>

    <fragment
        android:id="@+id/navigation_detail_transaction"
        android:name="com.informatika.bondoman.view.fragment.transaction.DetailTransactionFragment"
        android:label="@string/title_detail_transaction"
        tools:layout="@layout/fragment_detail_transaction" >
        <argument
            android:name="transaction"
            app:argType="com.informatika.bondoman.model.local.entity.transaction.Transaction" />

        <action android:id="@+id/action_navigation_detail_transaction_to_navigation_update_transaction"
            app:destination="@id/navigation_update_transaction" />
    </fragment>

    <fragment
        android:id="@+id/navigation_update_transaction"
        android:name="com.informatika.bondoman.view.fragment.transaction.UpdateTransactionFragment"
        android:label="@string/title_update_transaction"
        tools:layout="@layout/fragment_update_transaction">
        <argument
            android:name="transaction"
            app:argType="com.informatika.bondoman.model.local.entity.transaction.Transaction" />
    </fragment>
</navigation>