<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.ListTransactionFragment"
    app:layout_constraintBottom_toTopOf="@id/nav_view"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <data class="ListTransactionFragmentBinding" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/list_transaction_fragment_container">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTransactions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/list_item_transaction" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/purple_700"
            android:contentDescription="@string/add_transaction_action"
            android:padding="10dp"
            android:src="@drawable/ic_add_white"
            android:text="@string/action_create"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabScanTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="#FFFFFF"
            android:backgroundTint="@color/purple_700"
            android:contentDescription="@string/scan_transaction_action"
            android:foregroundTint="#FFFFFF"
            android:foregroundTintMode="add"
            android:padding="10dp"
            android:src="@drawable/ic_scan_white"
            android:tint="#FFFFFF"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/fabAddTransaction"
            app:layout_constraintEnd_toEndOf="parent"
            app:rippleColor="#FFFFFF"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_transaction_list"
            android:textAlignment="center"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>